--- a/src/global.scss
+++ b/src/global.scss
@@ -1,13 +1,11 @@
 /*
- * App Global CSS
- * ----------------------------------------------------------------------------
- * Put style rules here that you want to apply globally. These styles are for
- * the entire app and not just one component. Additionally, this file can be
- * used as an entry point to import other CSS/Sass files to be included in the
- * output CSS.
- * For more information on global stylesheets, visit the documentation:
- * https://ionicframework.com/docs/layout/global-stylesheets
- */
+ * App Global CSS
+ * ... (deskripsi) ...
+ */
+
+// LANGKAH 1: TAMBAHKAN BARIS INI DI PALING ATAS
+@import "theme/variables";
+
 
 /* Core CSS required for Ionic components to work properly */
 @import "@ionic/angular/css/core.css";
@@ -25,13 +23,14 @@
 @import "@ionic/angular/css/text-transformation.css";
 @import "@ionic/angular/css/flex-utils.css";
 
+
 /**
- * Ionic Dark Mode
- * -----------------------------------------------------
- * For more info, please see:
- * https://ionicframework.com/docs/theming/dark-mode
- */
+ * Ionic Dark Mode
+ * ... (deskripsi) ...
+ */
 
 /* @import "@ionic/angular/css/palettes/dark.always.css"; */
 /* @import "@ionic/angular/css/palettes/dark.class.css"; */
-@import "@ionic/angular/css/palettes/dark.system.css";
+
+// LANGKAH 2: BERI KOMENTAR ATAU HAPUS BARIS INI
+/* @import "@ionic/angular/css/palettes/dark.system.css"; */
