--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -1,5 +1,3 @@
-// For information on how to create your own theme, please see:
-// http://ionicframework.com/docs/theming/
 /*
  * Dark Colors
  * -------------------------------------------
@@ -8,5 +6,17 @@
 body.dark { // <--- TIDAK ADA '/*' DI SINI
   --ion-color-primary: #428cff;
   --ion-color-primary-rgb: 66,140,255;
-  // ... dan seterusnya
+  --ion-color-primary-contrast: #ffffff;
+  --ion-color-primary-contrast-rgb: 255,255,255;
+  --ion-color-primary-shade: #3a7be0;
+  --ion-color-primary-tint: #5598ff;
+  
+  /* ... sisa variabel warna untuk mode gelap ... */
+
+  --ion-color-light: #222428;
+  --ion-color-light-rgb: 34,36,40;
+  --ion-color-light-contrast: #ffffff;
+  --ion-color-light-contrast-rgb: 255,255,255;
+  --ion-color-light-shade: #1e2023;
+  --ion-color-light-tint: #383a3e;
 } // <--- TIDAK ADA '*/' DI SINI
