--- a/src/app/components/add-program-form/add-program-form.component.html
+++ b/src/app/components/add-program-form/add-program-form.component.html
@@ -27,6 +27,10 @@
         <ion-label position="floating" style="color: #5A6C7D; font-weight: 500;">Deskripsi Singkat</ion-label>
         <ion-textarea formControlName="desc" rows="3" style="--color: #2C3E50; font-size: 16px;"></ion-textarea>
       </ion-item>
+      <ion-item>
+  <ion-label position="floating">Ikon (Emoji)</ion-label>
+  <ion-input formControlName="icon" type="text"></ion-input>
+</ion-item>
 
       <ion-item lines="none" style="--background: rgba(255, 255, 255, 0.95); --border-radius: 15px; border: 1px solid rgba(74, 144, 226, 0.2); margin-bottom: 20px; box-shadow: 0 4px 16px rgba(74, 144, 226, 0.05); --padding-start: 15px;">
         <ion-label style="color: #5A6C7D; font-weight: 500;">Kategori</ion-label>
