--- a/src/app/tab2/tab2.page.html
+++ b/src/app/tab2/tab2.page.html
@@ -80,7 +80,7 @@
                 </div>
                 <div style="display: flex; gap: 12px;">
                   <button (click)="showKonversiPrompt()"style="background: rgba(255,255,255,0.2); color: white; border: 1px solid rgba(255,255,255,0.3); padding: 10px 18px; border-radius: 20px; font-size: 12px; font-weight: 500; backdrop-filter: blur(10px);">Konversi</button>
-                  <button (click)="usePoints()" style="background: rgba(255,255,255,0.2); color: white; border: 1px solid rgba(255,255,255,0.3); padding: 10px 18px; border-radius: 20px; font-size: 12px; font-weight: 500; backdrop-filter: blur(10px);">Gunakan</button>
+                  <button (click)="gunakanPoin()" style="background: rgba(255,255,255,0.2); color: white; border: 1px solid rgba(255,255,255,0.3); padding: 10px 18px; border-radius: 20px; font-size: 12px; font-weight: 500; backdrop-filter: blur(10px);">Gunakan</button>
                 </div>
               </div>
             </div>
